--- a/index.html
+++ b/index.html
@@ -7,15 +7,41 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Sunnyside agency landing page</title>
+  <link rel="stylesheet" href="./style.css">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  
 </head>
 <body>
-  About
+  <header>
+    <nav>
+      <a href="./" id="logo">
+        <img src="./images//logo.svg" alt="logo">
+      </a>
+      <ul>
+        <li>
+          <a href="#">About</a>
+        </li>
+        <li>
+          <a href="#">services</a>
+        </li>
+        <li>
+          <a href="#">projects</a>
+        </li>
+        <li>
+          <a href="#">contact</a>
+        </li>
+      </ul>
+
+      
+      
+      <button id="menu-opening" >
+        <img src="./images/icon-hamburger.svg" alt="hamburger">
+      </button>
+
+    </nav>
+  </header>
+  <!-- About
   Services
   Projects
   Contact
@@ -58,11 +84,11 @@
   About
   Services
   Projects
-  Contact
+  Contact -->
 
-  <div class="attribution">
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
 </body>
 </html>
